src/main/webapp/keyfeature3/css/custom-style.css
/* bootstrap tabs */
.demo-feature3 .nav-tabs li {
	font-style: normal;
	color: #3c3c3c;
	background-color: #ececec;
	border-radius: 5px 5px 0 0;
}

.demo-feature3 .nav-tabs li a {
	font-family: "Helvetica";
	font-size: 10.5px;
	color: #3c3c3c;
	margin: 0px;
	border: 1px solid #dadada;
}

.demo-feature3 .nav-tabs li.active a {
	font-weight: bold;
	background-color: #ffffff;
	border-bottom-color: transparent;
}

/*  tab layout */
.demo-feature3 .tab-pane .title {
	font-size: 11px;
	font-style: normal;
	color: #878787;
	text-transform: uppercase;
	margin-left: 10px;
}

.demo-feature3 .bgColor {
	background-color: #f5f5f5;
}

.demo-feature3 .titleBlock {
/* 	height: 24px; */
	background-color: white;
}

.demo-feature3 .codeSeparator {
	background-color: #f5f5f5;	
}

.demo-feature3 .codeBlock {
/* 	height: 161px;	 */
}

.demo-feature3 .codeBox {
	border-color: #dcdcdc;
	border-width: 0 0 1px 0;
	border-style: solid;
/* 	height: 160px; */
}

.demo-feature3 .exampleBlock {
/* 	height: 271px; */
}

.demo-feature3 .exampleBox {
	display: table-cell;
	vertical-align: middle;
	border-color: #dcdcdc;
	border-width: 1px 0 2px 0;
	background-color: white;
	border-radius: 0 0 5px 5px;
	border-style: solid;
/* 	height: 270px; */
}

/*  chartist */
.demo-feature3 .chartistContent {
	margin: 0 auto;
	width: 50%;
}

.demo-feature3 .before .chartistContent .z-label {
	font-size: 100px;
}

.ct-series-a .ct-slice-pie {
	fill: #ea5351;
	stroke: white;
	stroke-width: 4px;
}

.ct-label {
	fill: rgba(255, 255, 255, 0.9);
	color: rgba(255, 255, 255, 0.9);
	font-size: 2.3em;
	line-height: 1
}

/*  labelauty */
.demo-feature3 .labelautyContent {
	margin: 0 auto;
	width: 80%;
}


.demo-feature3 .z-checkbox-content {
	font-size: 19px;
	margin-left: 5px;
}

.demo-feature3 .z-checkbox>input {
	margin-bottom: 7px;
}

input.labelauty+label {
	display: inline-block;
	font-size: 15px;
	font-weight: bold;
	padding: 10px 12px 15px 12px;
}

input.labelauty.disable-icon+label>span.labelauty-checked-image {
	background-image: url(../scripts/auty/images/input-disabled.png);
}

input.labelauty.disable-icon+label>span.labelauty-unchecked-image {
	background-image: url(../scripts/auty/images/input-disabled.png);
}

input.labelauty.terms-icon+label>span.labelauty-checked-image {
	background-image: url(../scripts/auty/images/terms-checked.png);
}

input.labelauty.terms-icon+label>span.labelauty-unchecked-image {
	background-image: url(../scripts/auty/images/terms-unchecked.png);
}

.z-checkbox input[type=checkbox][disabled=disabled]+label.z-checkbox-content
	{
	opacity: 0.5;
}

/*  highlight */
.demo-feature3 .highlightContent {
	margin: 0 auto 0px auto;
	width: 90%;
	height: 220px;
}

/*  markdown */
.demo-feature3 .markdownContent {
	margin: 0 auto 0px auto;
	width: 90%;
	height: 220px;
}

.demo-feature3 .markdownContent h1 {
	margin-top: 0px;
}

/*  mask */
.demo-feature3 .maskContent {
	margin: 0 auto 0px auto;
	width: 90%;
}

.demo-feature3 .maskContent input[type="text"] {
	font-size: 13px;
}

.demo-feature3 .maskContent .z-label {
	font-size: 14px;
}

/*  view source */
.demo-feature3 .view-source {
	padding-right: 10px;
}

/*  code mirror */
.demo-feature3 .CodeMirror {
	height: 100%;	
}

.demo-feature3 .CodeMirror-gutters {
	width: 15px !important;
}

.demo-feature3 .CodeMirror-sizer {
	margin-left: 15px !important;
}

.demo-feature3 .CodeMirror-gutter-wrapper {
	left: -30px !important;
}

/* reposive design */
@media screen and (min-width: 320px) and (max-width: 479px) {
	.demo-feature3 .before .chartistContent .z-label {
		font-size: 35px;
	}
	.ct-label {
		font-size: 1em;
	}
	
	input.labelauty+label {
		font-size: 6px;
		padding: 2px 3px 6px 3px;
	}
	.demo-feature3 .z-checkbox-content {
		font-size: 9px;
		margin-left: 1px;
	}
	.demo-feature3 .maskContent {
		width: 100px;
	}
	.demo-feature3 .maskContent .z-label {
		font-size: 8px;
	}
	.demo-feature3 .maskContent input[type="text"] {
		font-size: 6px;
	}
}

@media screen and (min-width: 480px) and (max-width: 759px) {
	.demo-feature3 .before .chartistContent .z-label {
		font-size: 60px;
	}
	.ct-label {
		font-size: 1.5em;
	}
/* 	input.labelauty+label { */
/* 		font-size: 8px; */
/* 		padding: 4px 5px 9px 5px; */
/* 	} */
	.demo-feature3 .z-checkbox-content {
		font-size: 12px;
		margin-left: 2px;
	}
	.demo-feature3 .maskContent {
		width: 170px;
	}
	.demo-feature3 .maskContent .z-label {
		font-size: 10px;
	}
	.demo-feature3 .maskContent input[type="text"] {
		font-size: 9px;
	}
}

@media screen and (min-width: 760px) and (max-width: 959px) {
	.demo-feature3 .codeBox {
/* 		height: 100px; */
	}
	.demo-feature3 .before .chartistContent .z-label {
		font-size: 85px;
	}
	input.labelauty+label {
		font-size: 12px;
		padding: 8px 10px 14px 10px;
	}
	.demo-feature3 .z-checkbox-content {
		font-size: 14px;
		margin-left: 5px;
	}
	.demo-feature3 .maskContent {
		width: 300px;
	}
	.demo-feature3 .maskContent .z-label {
		font-size: 12px;
	}
	.demo-feature3 .maskContent input[type="text"] {
		font-size: 10px;
	}
}

